adding room and reservation endpoints
